--- a/Go_Laundry/app/src/main/AndroidManifest.xml
+++ b/Go_Laundry/app/src/main/AndroidManifest.xml
@@ -2,27 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.abdazizs.go_loundry">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_laundry"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_laundry"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Admin.AdminHomeActivity" />
         <activity android:name=".Customer.CustomerHomeActivity" />
         <activity android:name=".Admin.EditOrderActivity" />
-        <activity android:name=".Admin.ListOrderAdminActivity" />
+        <activity android:name=".Admin.ListOrderActivity" />
         <activity android:name=".Customer.CustomerPesanActivity" />
-        <activity android:name=".Customer.TambahCustomerAcivity" />
-        <activity android:name=".Customer.CustomerCekActivity" />
+        <activity android:name=".Customer.CustomerPesanDetailActivity" />
+        <activity android:name=".Customer.CRUD.CustomerAddData" />
+        <activity android:name=".Admin.ListCustomer"></activity>
     </application>
 
 </manifest>
